--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,6 +131,35 @@ main{
 	}
 }
 
+//Contact Page
+.boxes{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-top: 1rem;
+
+	div{
+		font-size: 1rem;
+		border: 3px #fff solid;
+		padding: 1.5rem 2.5rem;
+		margin-bottom: 3rem;
+		
+		@include ease-out;
+
+		&:hover{
+			padding: 0.5rem 1.5rem;
+			background: $secondary-color;
+			color: set-text-color($secondary-color);
+			cursor: pointer;
+			span{
+				color: set-text-color($secondary-color);
+			}
+		}
+	}
+}
+
+
 //Button Styles
 .btn{
 	display: block;
