--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,7 +52,7 @@ header{
 }
 
 main{
-	padding: 4rem;
+	padding: 0 4rem;
 	// height: 100%;
 	min-height: calc(100vh - 60px);
 	.icons{
@@ -78,6 +78,7 @@ main{
 .about-info{
 	display: grid;
 	grid-gap: 30px;
+	margin: 1rem;
 	grid-template-areas: 
 	'bioimage bio bio'
 	'job1 job2 job3';
